Docs: Fix some headers overlap issues

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -216,6 +216,8 @@ $docs-color: #246;
 }
 
 .jumbotron-docs {
+    position: relative;
+    z-index: 1;
     padding: .5rem .375rem;
     margin-bottom: 0;
     color: rgba(255, 255, 255, .9);
